# podcast

./: .gitattributes  .gitignore  AGENT.md  CLAUDE.md  README.md  TTS-GENERATE.txt  demo.txt
.github/: kokoro-cache-bust.txt
.github/workflows/: build.yml
android/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/portal/: index.html.tmpl
desktop/scripts/: precache-geektime-qwen.ps1
desktop/sidecar/: engine_base.py  engine_kokoro.py  engine_qwen.py  engine_stub.py  main.py  pyproject.toml
desktop/sidecar/tests/: __init__.py  conftest.py  test_api.py  test_engine_stub.py  test_kokoro_lang.py  test_lazy_imports.py  test_qwen_config.py
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: cache.rs  db.rs  import_epub.rs  import_txt.rs  lib.rs  main.rs  notes.rs  reader.rs  sidecar.rs  stats.rs  storage.rs  tts.rs
desktop/src/lib/: api.ts  i18n.ts  sentences.ts  sessions.ts
desktop/src/state/: jobs.ts  library.ts  player.ts  reader.ts  settings.ts  tts.ts
desktop/src/styles/: app.css  themes.css
docs/: cloud-agent-handoff.md  reader-app-plan.md
macos/: README.md
macos/installer/: dmg.config.json
macos/sidecar-env/: activate.sh  requirements.txt
models/: README.md
scripts/: convert_kokoro_to_onnx.py  macos-build.sh  macos-dev.sh  macos-setup.sh  run_demo.py  windows-build.ps1  windows-dev.ps1  windows-setup.ps1
windows/: INSTALL_zh-CN.md  README.md
windows/installer/: wix.config.json
windows/sidecar-env/: activate.ps1  requirements.txt
(+48 files in other folders)
